Add candidate position specialty state and city filters
